# CAP-SH256Cracker

./: CMakeLists.txt  README.md  crackerSecuencial.c
Cracker/: cracker.c  crackerParalelo  crackerSecuencial  cracker_openmp.c  cracker_secuencial  cracker_secuencial.c  mypow.c  mypow.h  prueba_mypow.c  prueba_paralela
Cracker/hasher/: sha256.c
CrackerMPI/: cracker.c  crackerMPI  crackerParalelo  crackerSecuencial  crackerSecuencial.c
CrackerSecuencial/: cracker_openmp.c  cracker_secuencial  cracker_secuencial.c  hola.txt  hola2.txt  mypow.c  prueba_mypow  prueba_mypow.c  prueba_secuencial
CrackerSecuencial/hasher/: sha256.c  sha256.h
Hasher-SHA256/: HasherTest  README.txt  sha256_test2.c
